project after debugging